deployment/dms/dms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dms
  template:
    metadata:
      labels:
        app: dms
    spec:
      containers:
        - name: dms
          image: ghcr.io/q-sharafian/dms:latest # Use your image
          ports:
            - containerPort: 8080 # Your application's port
          resources:
            requests:
              cpu: 300m
              memory: 600Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 300m
              memory: 600Mi
              ephemeral-storage: 1Gi
      imagePullSecrets:
        - name: registry-secret
