deployment/dms/dms-service.yml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: dms-service
  labels:
    app: dms
spec:
  # Choose how to expose your service
  type: ClusterIP
  ports:
    - name: http
      # The port number to expose the service
      port: 7956
      protocol: TCP
      targetPort: 8080
  # Pod to route service traffic  
  selector:
    app: dms # Matches the app label in your PostgreSQL deployment
